--- a/app/src/main/res/layout/workbench_tab_fragment.xml
+++ b/app/src/main/res/layout/workbench_tab_fragment.xml
@@ -1,38 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragments.tabs.workbench.WorkbenchTab">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="horizontal"
+	tools:context=".fragments.tabs.workbench.WorkbenchTab">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+	<androidx.recyclerview.widget.RecyclerView
+		android:id="@+id/taskList"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_weight="1" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/taskList"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+	<FrameLayout
+		android:id="@+id/current_timer"
+		android:layout_weight="1"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
+	<!-- LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_weight="1"
+		android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Should contain a list of all task items to do, in a hierarchical list, preferably sorted in what is the best way to do them" />
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Should contain a list of all task items to do, in a hierarchical list, preferably sorted in what is the best way to do them" />
 
-            <TextView
-                android:id="@+id/debugText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
-        </LinearLayout>
-    </LinearLayout>
-
-</FrameLayout>
+		<TextView
+			android:id="@+id/debugText"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="TextView" />
+	</LinearLayout-->
+</LinearLayout>
