--- a/app/src/main/res/layout/fragment_running_timers_list.xml
+++ b/app/src/main/res/layout/fragment_running_timers_list.xml
@@ -25,6 +25,26 @@
             android:layout_height="wrap_content"
             android:text="5m 23s" />
 
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="6dp"
+          android:orientation="horizontal">
+
+            <View
+              android:id="@+id/progress_marked"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_weight="100"
+              android:background="#4CAF50" />
+
+            <View
+              android:id="@+id/progress_empty"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_weight="0"
+              android:background="#FFFFFF" />
+        </LinearLayout>
+
     </LinearLayout>
 
 
