--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -126,7 +126,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_toLeftOf="@id/divider8"
                 android:layout_width="wrap_content"
-                android:background="#F0AA10"
+                android:background="#999"
                 android:layout_height="match_parent" />
 
             <View
