--- a/app/src/main/res/layout/running_timer_fragment.xml
+++ b/app/src/main/res/layout/running_timer_fragment.xml
@@ -93,7 +93,7 @@
 
 			<View
 				android:layout_width="match_parent"
-				android:layout_height="2px"
+				android:layout_height="2dp"
 				android:layout_column="1"
 				android:background="@color/black_overlay" />
 
@@ -125,5 +125,11 @@
 		</TableRow>
 
 	</TableLayout>
+
+	<View
+		android:layout_weight="1"
+		android:background="@color/black_overlay"
+		android:layout_width="match_parent"
+		android:layout_height="0dp" />
 
 </LinearLayout>
