--- a/app/src/main/res/layout/kitchen_layout_tab_fragment.xml
+++ b/app/src/main/res/layout/kitchen_layout_tab_fragment.xml
@@ -12,17 +12,15 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content" />
 
-	<TableLayout
-		android:id="@+id/grid"
+	<FrameLayout
+		android:id="@+id/layout"
 		android:orientation="horizontal"
 		android:columnCount="16"
 		android:stretchColumns="*"
 		android:background="@color/black_overlay"
 		android:layout_weight="1"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
-
-	</TableLayout>
+		android:layout_height="0dp" />
 
 	<Space
 		android:layout_width="match_parent"
